# BrilliantPDF-RustAndJs

./: .gitignore  .taurignore  index.html  output.css  package-lock.json  package.json  splashscreen.html  tailwind.config.js  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: .env  Cargo.toml  database.db  hash.json  splashscreen.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.db  database.rs  generate_pdf.rs  lib.rs  main.rs
src/components/dropdownMenu/: index.jsx
src/components/header/: index.jsx
src/components/itemList/: index.jsx
src/components/loginScreen/: index.jsx
src/components/routes/addItem/: index.css  index.jsx
src/components/routes/addSection/: index.jsx
src/components/routes/editSection/: index.jsx
src/components/routes/home/: index.jsx
src/components/sectionList/: index.jsx
src/components/sidebar/: index.jsx
src/components/sidebaritem/: index.jsx
src/components/sponsorCard/: index.jsx
