[package]
name = "brilliantpdf"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "brilliantpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genpdf = "0.2.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
dirs = "5.0.1"
webbrowser = "1.0.2"
base64 = "0.22.1"
svg = "0.18.0"
rfd = "0.15.0"
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
dotenv = "0.15.0"
