[package]
name = "brilliantpdf"
version = "1.0.0"
description = "BrilliantSoftware"
authors = ["BrilliantSoftware"]
edition = "2021"

[lib]
name = "brilliantpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genpdf = "0.2.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
dirs = "5.0.1"
webbrowser = "1.0.2"
base64 = "0.22.1"
svg = "0.18.0"
rfd = "0.15.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
uuid = "1.11.0"
sha = "1.0.3"
sha2 = "0.10.8"
get_if_addrs = "0.5.3"
sysinfo = "0.33.1"
rand = "0.7.3"
hex = "0.4.3"
aes-gcm = "0.10.3"
