[package]
name = "brilliantpdf"
version = "1.0.0"
description = "BrilliantSoftware"
authors = ["BrilliantSoftware"]
edition = "2021"

[lib]
name = "brilliantpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
webbrowser = "1.0.2"
rfd = "0.15.0"
sha2 = "0.10.8"
sysinfo = "0.33.1"
hex = "0.4.3"
aes-gcm = "0.10.3"
reqwest = { version = "0.12.9", features = ["json"] }
